--- a/css/style-customizado.css
+++ b/css/style-customizado.css
@@ -1,3 +1,14 @@
+body, html {
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+}
+
 .nav-link {
     color: #000;
+}
+
+.box {
+    padding: 60px 0px;
+    border-bottom: 1.5px solid #5f5f5f6b;
 }
